JAVA-38566 Fix core-java-14 in the context of migrating to JDK 21